--- a/index.html
+++ b/index.html
@@ -387,13 +387,13 @@
 
 					<div class="bgrid folio-item">
 						<div class="item-wrap">
-							<img src="images/portfolio/krystall.png" alt="Shutterbug">
+							<img src="images/portfolio/krystall.png" alt="Krystall Forsvar">
 							<a href="#modal-02" class="overlay">
 								<div class="folio-item-table">
 									<div class="folio-item-cell">
 										<h3 class="folio-title">Krystall Forsvar</h3>
 										<span class="folio-types">
-											TD Game with command voice
+											Tower Defense Game
 										</span>
 									</div>
 								</div>
