--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
 
 					<div class="bgrid folio-item">
 						<div class="item-wrap">
-							<img src="images/portfolio/krystall.png" alt="Krystall Forsvar">
+							<img src="images/portfolio/krystall.jpg" alt="Krystall Forsvar">
 							<a href="#modal-02" class="overlay">
 								<div class="folio-item-table">
 									<div class="folio-item-cell">
