--- a/index.html
+++ b/index.html
@@ -497,7 +497,7 @@
 						</div>
 
 						<div class="link-box">
-							<a href="https://drive.google.com/file/d/19NV4J2PfgUz8oEIp2vKN5zGqNl87tZen/view?usp=sharing"
+							<a href="https://www.youtube.com/watch?v=kM40sP6Yhzs"
 								target="_blank">Details</a>
 							<a href="#" class="popup-modal-dismiss">Close</a>
 						</div>
