--- a/index.html
+++ b/index.html
@@ -76,13 +76,9 @@
 
 				<div class="col-twelve">
 
-					<h5>Hello, World.</h5>
+					
 					<h1>Giovanni Alarcón</h1>
-
-					<p class="intro-position">
-						<span>Unity Developer</span>
-					</p>
-
+					<h5>Unity Developer</h5>
 					<a class="button stroke smoothscroll" href="#about" title="">More About Me</a>
 
 				</div>
@@ -116,7 +112,7 @@
 
 				<div class="intro-info">
 
-					<img src="images/0.jfif" alt="Profile Picture">
+					<img src="images/0.jpg" alt="Profile Picture">
 
 					<p class="lead">Developer unity oriented to the creation of virtual reality projects, increased
 						reality and mobile applications, with 3 years of experience working with C# programming language
