--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 
 				<div class="intro-info">
 
-					<img src="images/0.jpg" alt="Profile Picture">
+					<img src="images/0.JPG" alt="Profile Picture">
 
 					<p class="lead">Developer unity oriented to the creation of virtual reality projects, increased
 						reality and mobile applications, with 3 years of experience working with C# programming language
