--- a/index.html
+++ b/index.html
@@ -380,7 +380,24 @@
 							</a>
 						</div>
 					</div> <!-- /folio-item -->
+				<!-- portfolio-wrapper -->
+				<div id="folio-wrapper" class="block-1-2 block-mob-full stack">
 
+					<div class="bgrid folio-item">
+						<div class="item-wrap">
+							<img src="images/portfolio/Beyond.PNG" alt="Beyond">
+							<a href="#modal-08" class="overlay">
+								<div class="folio-item-table">
+									<div class="folio-item-cell">
+										<h3 class="folio-title">Beyond The Light</h3>
+										<span class="folio-types">
+											Crossplatform game
+										</span>
+									</div>
+								</div>
+							</a>
+						</div>
+					</div> <!-- /folio-item -->
 					<div class="bgrid folio-item">
 						<div class="item-wrap">
 							<img src="images/portfolio/krystall.PNG" alt="Krystall Forsvar">
@@ -623,7 +640,26 @@
 
 					</div> <!-- /modal-06 -->
 
+				</div> <!-- /modal-08 -->
+				<div id="modal-08" class="popup-modal slider mfp-hide">
 
+					<div class="media">
+						<img src="images/portfolio/Beyond.PNG" alt="" />
+					</div>
+
+					<div class="description-box">
+						<h4>Beyond The Light</h4>
+						<p>Psychological horror game in progress.</p>
+
+						<div class="categories">Game</div>
+					</div>
+
+					<div class="link-box">
+						<a href="https://drive.google.com/file/d/1_9bQu3VhZN2cBkPt7butWH0NrkVzk_Ec/view?usp=sharing" target="_blank">Details</a>
+						<a href="#" class="popup-modal-dismiss">Close</a>
+					</div>
+
+				</div> <!-- /modal-06 -->
 					<!-- modal popups - end
 	            ============================================================= -->
 
