--- a/index.html
+++ b/index.html
@@ -757,6 +757,9 @@
 			<div class="col-six tab-full">
 				<div class="copyright">
 					<span>Giovanni Alarcón</span>
+					<a href="https://www.hitwebcounter.com" target="_blank">
+						<img src="https://hitwebcounter.com/counter/counter.php?page=7538579&style=0007&nbdigits=5&type=ip&initCount=0" title="Web Counter" Alt="counter free"   border="0" >
+						</a>            
 				</div>
 			</div>
 
@@ -776,7 +779,6 @@
 	<script src="js/jquery-2.1.3.min.js"></script>
 	<script src="js/plugins.js"></script>
 	<script src="js/main.js"></script>
-
 </body>
 
 </html>
