--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
 						</div>
 
 						<div class="link-box">
-							<a href="https://drive.google.com/file/d/1rC90KIePVCHlstubytBB508jrcnuIoqJ/view?usp=sharing"
+							<a href="https://www.youtube.com/watch?v=-QCmDPNBXWY&feature=youtu.be"
 								target="_blank">Details</a>
 								<a href="https://drive.google.com/file/d/1vddpRDdBUWckSrzPZ56a85IoXpuSj0m_/view?usp=sharing"
 								target="_blank">Demo</a>
