Zombie and Json

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 
 				<ul class="skill-bars">
 					<li>
-						<div class="progress percent90"><span>90%</span></div>
+						<div class="progress percent100"><span>100%</span></div>
 						<strong>Virtual Reality</strong>
 					</li>
 					<li>
@@ -163,11 +163,11 @@
 						<div class="progress percent95"><span>95%</span></div>
 						<strong>C#</strong>
 					</li>
-					<li>
+					<!-- <li>
 
 						<div class="progress percent75"><span>75%</span></div>
 						<strong>Node JS</strong>
-					</li>
+					</li> -->
 
 				</ul> <!-- /skill-bars -->
 
@@ -197,7 +197,6 @@
 
 				<p class="lead">
 					These are some of the works that I have done in a particular way.</p>
-
 			</div>
 		</div> <!-- /section-intro-->
 
@@ -210,36 +209,55 @@
 
 					<div class="bgrid folio-item">
 						<div class="item-wrap">
-							<img src="images/portfolio/draint.PNG" alt="Liberty">
-							<a href="#modal-01" class="overlay">
+							<img src="images/portfolio/ZombieWorld.jpg" alt="Liberty">
+							<a href="#modal-09" class="overlay">
 								<div class="folio-item-table">
 									<div class="folio-item-cell">
-										<h3 class="folio-title">Draint</h3>
+										<h3 class="folio-title">Zombie World</h3>
 										<span class="folio-types">
-											Virtual Reality Game
+											Shooting Virtual Reality Game
 										</span>
 									</div>
 								</div>
 							</a>
 						</div>
 					</div> <!-- /folio-item -->
-				<!-- portfolio-wrapper -->
-				<div id="folio-wrapper" class="block-1-2 block-mob-full stack">
+					<!-- portfolio-wrapper -->
+					<!-- portfolio-wrapper -->
+					<div id="folio-wrapper" class="block-1-2 block-mob-full stack">
 
-					<div class="bgrid folio-item">
-						<div class="item-wrap">
-							<img src="images/portfolio/Beyond.PNG" alt="Beyond">
-							<a href="#modal-08" class="overlay">
-								<div class="folio-item-table">
-									<div class="folio-item-cell">
-										<h3 class="folio-title">Beyond The Light</h3>
-										<span class="folio-types">
-											Crossplatform game
-										</span>
+						<div class="bgrid folio-item">
+							<div class="item-wrap">
+								<img src="images/portfolio/Draint.jpg" alt="Liberty">
+								<a href="#modal-01" class="overlay">
+									<div class="folio-item-table">
+										<div class="folio-item-cell">
+											<h3 class="folio-title">Draint</h3>
+											<span class="folio-types">
+												Draw & Paint Virtual Reality Game
+											</span>
+										</div>
 									</div>
-								</div>
-							</a>
-						</div>
+								</a>
+							</div>
+						</div> <!-- /folio-item -->
+						<!-- portfolio-wrapper -->
+						<!-- <div id="folio-wrapper" class="block-1-2 block-mob-full stack">
+
+							<div class="bgrid folio-item">
+								<div class="item-wrap">
+									<img src="images/portfolio/Beyond.PNG" alt="Beyond">
+									<a href="#modal-08" class="overlay">
+										<div class="folio-item-table">
+											<div class="folio-item-cell">
+												<h3 class="folio-title">Beyond The Light</h3>
+												<span class="folio-types">
+													Crossplatform game
+												</span>
+											</div>
+										</div>
+									</a>
+								</div> -->
 					</div> <!-- /folio-item -->
 					<div class="bgrid folio-item">
 						<div class="item-wrap">
@@ -249,7 +267,7 @@
 									<div class="folio-item-cell">
 										<h3 class="folio-title">Krystall Forsvar</h3>
 										<span class="folio-types">
-											Tower Defense Game
+											Tower Defense Desktop Game
 										</span>
 									</div>
 								</div>
@@ -288,7 +306,21 @@
 							</a>
 						</div>
 					</div> <!-- /folio-item -->
-
+					<div class="bgrid folio-item">
+						<div class="item-wrap">
+							<img src="images/portfolio/json.png" alt="Lighthouse">
+							<a href="#modal-10" class="overlay">
+								<div class="folio-item-table">
+									<div class="folio-item-cell">
+										<h3 class="folio-title">Json Reader</h3>
+										<span class="folio-types">
+											A simple Json Reader Class, with refresh page.
+										</span>
+									</div>
+								</div>
+							</a>
+						</div>
+					</div> <!-- /folio-item -->
 					<div class="bgrid folio-item">
 						<div class="item-wrap">
 							<img src="images/portfolio/cloud.png" alt="Lighthouse">
@@ -337,24 +369,64 @@
 					</div> <!-- /folio-item -->
 
 					<!-- modal popups - begin
-	            ============================================================= -->
+				============================================================= -->
+					<div id="modal-10" class="popup-modal slider mfp-hide">
+
+						<div class="media">
+							<img src="images/portfolio/json.png" alt="" />
+						</div>
+
+						<div class="description-box">
+							<h4>Json Reader</h4>
+							<p>A simple asset, to read a Json from scratch, update json in folder and see changes in Game.</p>
+
+							<div class="categories">Asset</div>
+						</div>
+
+						<div class="link-box">
+							<a href="https://github.com/gialarconv/JSONReader" target="_blank">Details.</a>
+							<a href="#" class="popup-modal-dismiss">Close</a>
+						</div>
+
+					</div> <!-- /modal-10 -->
+					<div id="modal-09" class="popup-modal slider mfp-hide">
+
+						<div class="media">
+							<img src="images/portfolio/ZombieWorld.jpg" alt="" />
+						</div>
+
+						<div class="description-box">
+							<h4>Zombie World</h4>
+							<p>Zombie World is a shooting game for virtual reality,
+								where you must destroy the hordes of zombies that come to attack.
+								Coming soon on Side Quest. .</p>
+
+							<div class="categories">VR Game</div>
+						</div>
+
+						<div class="link-box">
+							<a href="https://www.facebook.com/EasyLifeDev" target="_blank">Details.</a>
+							<a href="#" class="popup-modal-dismiss">Close</a>
+						</div>
+
+					</div> <!-- /modal-09 -->
 					<div id="modal-01" class="popup-modal slider mfp-hide">
 
 						<div class="media">
-							<img src="images/portfolio/draint.PNG" alt="" />
+							<img src="images/portfolio/Draint.jpg" alt="" />
 						</div>
 
 						<div class="description-box">
 							<h4>Creating with Draint</h4>
-							<p>Creating with Draint is a VR game where you can draw, paint, put some decals, take photos
+							<p>Creating with Draint is a VR game where you can draw, paint, put some decals,
+								take photos
 								of the things you've done. This game is made to be used in Oculus quest.</p>
 
 							<div class="categories">VR Game</div>
 						</div>
 
 						<div class="link-box">
-							<a href="https://sidequestvr.com/app/1247/creating-with-draint"
-								target="_blank">Details</a>
+							<a href="https://sidequestvr.com/app/1247/creating-with-draint" target="_blank">Details</a>
 							<a href="#" class="popup-modal-dismiss">Close</a>
 						</div>
 
@@ -368,7 +440,8 @@
 
 						<div class="description-box">
 							<h4>Krystall Forsvar</h4>
-							<p>This is a Tower Defense game, with command voice option, you can use the commando voice
+							<p>This is a Tower Defense game, with command voice option, you can use the commando
+								voice
 								to respawn the different weaponts in the differents spots.</p>
 
 							<div class="categories">Desktop Game</div>
@@ -377,7 +450,7 @@
 						<div class="link-box">
 							<a href="https://www.youtube.com/watch?v=-QCmDPNBXWY&feature=youtu.be"
 								target="_blank">Details</a>
-								<a href="https://drive.google.com/file/d/1vddpRDdBUWckSrzPZ56a85IoXpuSj0m_/view?usp=sharing"
+							<a href="https://drive.google.com/file/d/1vddpRDdBUWckSrzPZ56a85IoXpuSj0m_/view?usp=sharing"
 								target="_blank">Demo</a>
 							<a href="#" class="popup-modal-dismiss">Close</a>
 						</div>
@@ -392,10 +465,11 @@
 
 						<div class="description-box">
 							<h4>VOX</h4>
-							<p>Vox is a simple desktop game, who you can play with commando voice to move the cube to
+							<p>Vox is a simple desktop game, who you can play with commando voice to move the
+								cube to
 								the end.</p>
 
-							<div class="categories">Web Design</div>
+							<div class="categories">Desktop Game</div>
 						</div>
 
 						<div class="link-box">
@@ -415,7 +489,7 @@
 						<div class="description-box">
 							<h4>Gender Detecter</h4>
 							<p>A service with Azure, to detect gender, age, color and another more things.</p>
-							<div class="categories">Service</div>
+							<div class="categories">Asset</div>
 						</div>
 
 						<div class="link-box">
@@ -434,10 +508,11 @@
 
 						<div class="description-box">
 							<h4>Easy Downloader</h4>
-							<p>If you want download a file into your phone, oculus headset or desktop, just add this
+							<p>If you want download a file into your phone, oculus headset or desktop, just add
+								this
 								script into your project, and add the UI elements you want.</p>
 
-							<div class="categories">Service</div>
+							<div class="categories">Asset</div>
 						</div>
 
 						<div class="link-box">
@@ -456,7 +531,7 @@
 						<div class="description-box">
 							<h4>Procedural Creator</h4>
 							<p>A procedural Terrain and Mesh creator.</p>
-							<div class="categories">Scripts</div>
+							<div class="categories">Asset</div>
 						</div>
 
 						<div class="link-box">
@@ -475,7 +550,7 @@
 							<h4>Easy screenshot</h4>
 							<p>Eeasy script for your projects, to take a screenshot of your Main Camera.</p>
 
-							<div class="categories">Script</div>
+							<div class="categories">Asset</div>
 						</div>
 
 						<div class="link-box">
@@ -500,17 +575,18 @@
 					</div>
 
 					<div class="link-box">
-						<a href="https://drive.google.com/file/d/1_9bQu3VhZN2cBkPt7butWH0NrkVzk_Ec/view?usp=sharing" target="_blank">Details</a>
+						<a href="https://drive.google.com/file/d/1_9bQu3VhZN2cBkPt7butWH0NrkVzk_Ec/view?usp=sharing"
+							target="_blank">Details</a>
 						<a href="#" class="popup-modal-dismiss">Close</a>
 					</div>
 
 				</div> <!-- /modal-06 -->
-					<!-- modal popups - end
+				<!-- modal popups - end
 	            ============================================================= -->
 
-				</div> <!-- /portfolio-wrapper -->
+			</div> <!-- /portfolio-wrapper -->
 
-			</div> <!-- /twelve -->
+		</div> <!-- /twelve -->
 
 		</div> <!-- /portfolio-content -->
 
@@ -603,8 +679,9 @@
 				<div class="copyright">
 					<span>Giovanni Alarcón</span>
 					<a href="https://www.hitwebcounter.com" target="_blank">
-						<img src="https://hitwebcounter.com/counter/counter.php?page=7538579&style=0007&nbdigits=5&type=ip&initCount=0" title="Web Counter" Alt="counter free"   border="0" >
-						</a>            
+						<img src="https://hitwebcounter.com/counter/counter.php?page=7538579&style=0007&nbdigits=5&type=ip&initCount=0"
+							title="Web Counter" Alt="counter free" border="0">
+					</a>
 				</div>
 			</div>
 
