--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@
 						</div>
 
 						<div class="link-box">
-							<a href="https://www.facebook.com/EasyLifeDev" target="_blank">Details.</a>
+							<a href="https://sidequestvr.com/app/3139/zombie-world" target="_blank">Details.</a>
 							<a href="#" class="popup-modal-dismiss">Close</a>
 						</div>
 
