update name sculptering

--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
 										</div>
 
 										<div class="description-box">
-											<h4>Zombie World HD</h4>
+											<h4>Sculptering</h4>
 											<p>A virtual reality game, where you can sculpt and save your fine arts.
 											</p>
 
